src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Corporate Communication</fullName>
        <description>Used for media contacts</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MACS - Sales</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Lead Process</fullName>
        <description>Process used by MACS and IDFS (IDO)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Strategic Partnerships</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Aborted</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Contacted%2FAssessed</fullName>
        </values>
        <values>
            <fullName>New Lead</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Verified by SP team</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AOC_Officer_Type__c</fullName>
        <label>AOC Officer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chairman</fullName>
                </value>
                <value>
                    <fullName>First Vice-Chairman</fullName>
                </value>
                <value>
                    <fullName>Immediate Past Chairman</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Second Vice-Chairman</fullName>
                </value>
                <value>
                    <fullName>Secretary/Treasurer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airline__c</fullName>
        <label>Airline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airport_AOC_Name__c</fullName>
        <label>Airport AOC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airport_BAR__c</fullName>
        <label>Airport BAR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Areas_of_Interest_Multi__c</fullName>
        <label>Areas of Interest Multi</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airline Mgmt and Business Dev</fullName>
                </value>
                <value>
                    <fullName>Air Navigation Services</fullName>
                </value>
                <value>
                    <fullName>Airport Planning, Mgmt and Ops</fullName>
                </value>
                <value>
                    <fullName>Aviation Environment and Fuel</fullName>
                </value>
                <value>
                    <fullName>Aviation Law</fullName>
                </value>
                <value>
                    <fullName>Aviation Security</fullName>
                </value>
                <value>
                    <fullName>Cargo and Dangerous Goods Regulations</fullName>
                </value>
                <value>
                    <fullName>Civil Aviation</fullName>
                </value>
                <value>
                    <fullName>Fares, Revenue Accounting and Control</fullName>
                </value>
                <value>
                    <fullName>Ground Operations</fullName>
                </value>
                <value>
                    <fullName>Organization and Human Performance</fullName>
                </value>
                <value>
                    <fullName>Quality, Audit and Airline Operations</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Travel and Tourism</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Areas_of_Interest__c</fullName>
        <label>Areas of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Airline Business Management</fullName>
                </value>
                <value>
                    <fullName>Airline Management and Business Development</fullName>
                </value>
                <value>
                    <fullName>Airline Operations and Quality</fullName>
                </value>
                <value>
                    <fullName>Air Navigation Services</fullName>
                </value>
                <value>
                    <fullName>Airport Planning, Management and Operations</fullName>
                </value>
                <value>
                    <fullName>Airport Planning, Operations and Management</fullName>
                </value>
                <value>
                    <fullName>Aviation Environment and Fuel</fullName>
                </value>
                <value>
                    <fullName>Aviation Law</fullName>
                </value>
                <value>
                    <fullName>Aviation Security</fullName>
                </value>
                <value>
                    <fullName>Cargo &amp; Logistics</fullName>
                </value>
                <value>
                    <fullName>Cargo and Dangerous Goods Regulations</fullName>
                </value>
                <value>
                    <fullName>Civil Aviation</fullName>
                </value>
                <value>
                    <fullName>Civil Aviation Authorities</fullName>
                </value>
                <value>
                    <fullName>Dangerous Goods Regulations</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Fares, Revenue Accounting and Control</fullName>
                </value>
                <value>
                    <fullName>Fares and Ticketing</fullName>
                </value>
                <value>
                    <fullName>Finance and Accounting</fullName>
                </value>
                <value>
                    <fullName>Ground Operations</fullName>
                </value>
                <value>
                    <fullName>Law and Regulations</fullName>
                </value>
                <value>
                    <fullName>Management and Leadership</fullName>
                </value>
                <value>
                    <fullName>Organization and Human Performance</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Quality, Audit and Airline Operations</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Travel and Tourism</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BAR_Officer_Type__c</fullName>
        <label>BAR Officer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chairman</fullName>
                </value>
                <value>
                    <fullName>First Vice-Chairman</fullName>
                </value>
                <value>
                    <fullName>Immediate Past Chairman</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Second Vice-Chairman</fullName>
                </value>
                <value>
                    <fullName>Secretary/Treasurer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_time_to_contact_me__c</fullName>
        <label>Best time to contact me</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>After working hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__ProductInterest__c</fullName>
        <label>DupeBlocker - Ignore</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Info_10__c</fullName>
        <label>Campaign Info 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Info_1__c</fullName>
        <label>Campaign Info 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Info_2__c</fullName>
        <label>Campaign Info 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_comments__c</fullName>
        <description>Field to enter information on contacts with the lead</description>
        <label>Campaign Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Revenue Accounting</fullName>
                </value>
                <value>
                    <fullName>Finance (Other)</fullName>
                </value>
                <value>
                    <fullName>Invoicing</fullName>
                </value>
                <value>
                    <fullName>General Management</fullName>
                </value>
                <value>
                    <fullName>Dispute Management</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Debt Management</fullName>
                </value>
                <value>
                    <fullName>Other  (Please Specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_title__c</fullName>
        <label>Course title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Crisis_Communications_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From: ALBA MANRIQUE Mariana 
Sent: Thursday, March 17, 2011 10:00 AM
To: CHERNOUSOVA Elena
Subject: Additional Field to Sales Force CorpComms for &quot;Crisis Comms Members&quot;


Dear Elena,

I would like to ask you if it would be possible to have a &quot;tick box&quot; in our Leads set up in Sales Force, like the ones that we have for TOP 100 journalists.

We would like to have the way to identify some members as &quot;Crisis Communications Members&quot;. This &quot;tick box&quot; would be really helpful.

Thanks in advance for your advise on this query,

Mariana.

Mariana C. ALBA MANRIQUE
Coordinator
Corporate Communications
Tel  + 41 (22) 770 2967
Fax + 41 (22) 770 2641
albam@iata.org</description>
        <label>Crisis Communications Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Country_ISO_Code__c</fullName>
        <label>Country ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSE__DS_DataScout_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud Customer 360: used internally</description>
        <label>Cloud Customer 360 Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Legal_Form__c</fullName>
        <description>company&apos;s legal form</description>
        <label>Legal Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Synchronize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud Customer 360: synchronize Lead data with Bean</description>
        <inlineHelpText>Cloud Customer 360: synchronize Lead data with Bean</inlineHelpText>
        <label>Synchronize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__Demo_Classifications__c</fullName>
        <label>Demo Classifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Cleansing</fullName>
                </value>
                <value>
                    <fullName>Deduplication</fullName>
                </value>
                <value>
                    <fullName>Consolidation</fullName>
                </value>
                <value>
                    <fullName>Enrichment</fullName>
                </value>
                <value>
                    <fullName>Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Top</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSE__Demo_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Demo ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DSE__Domain__c</fullName>
        <description>Demo Edition only</description>
        <inlineHelpText>Demo Edition only</inlineHelpText>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__VAT_ID__c</fullName>
        <label>VAT ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ET_status__c</fullName>
        <description>ExactTarget Status (unsubscribed, bounced)</description>
        <label>ET status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <description>Used in the web2lead form for Corp Comms</description>
        <label>Email 2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_A__c</fullName>
        <label>Email (A)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_B__c</fullName>
        <label>Email (B)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Source__c</fullName>
        <label>Event Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Campaign__c</fullName>
        <description>Because the leads loss the campaign ID after creation (as a lead can be linked to many Campaigns), the idea is to keep track and be able to report on the campaign at the origin of this lead)</description>
        <label>First Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Areas_of_Involvement__c</fullName>
        <label>Industry Areas of Involvement</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOB_Interest__c</fullName>
        <label>LOB Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Facillitation</fullName>
                </value>
                <value>
                    <fullName>Financial Settlement Services</fullName>
                </value>
                <value>
                    <fullName>Fuel</fullName>
                </value>
                <value>
                    <fullName>In-Class Training</fullName>
                </value>
                <value>
                    <fullName>In-Company / Regional Training</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Member Relations</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Promotional</fullName>
                </value>
                <value>
                    <fullName>Publications</fullName>
                </value>
                <value>
                    <fullName>Regulatory Services</fullName>
                </value>
                <value>
                    <fullName>Safety Solutions</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Standards Development</fullName>
                </value>
                <value>
                    <fullName>Statistics</fullName>
                </value>
                <value>
                    <fullName>Strategic Partnerships</fullName>
                </value>
                <value>
                    <fullName>Surveys</fullName>
                </value>
                <value>
                    <fullName>Tariff Expertise</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>User Charges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Notes__c</fullName>
        <description>To capture open text lead information from web forms</description>
        <label>Lead Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entry-Level</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Communications_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the person has explicitly oopted-in via IATA&apos;s virtual Lounge or any other valid mechanism.</description>
        <inlineHelpText>Check if the person has explicitly oopted-in via IATA&apos;s virtual Lounge or any other valid mechanism.</inlineHelpText>
        <label>Marketing Opt in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Function__c</fullName>
        <label>Job Function</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aeropolitical</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Gen.Management</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing&amp;Sales</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Security&amp; Facilitation</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <formula>OwnerId 

&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(OwnerId,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(OwnerId,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;) &gt;0,2,0)
    +IF(FIND(MID(OwnerId,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID (OwnerId,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF (FIND(MID(OwnerId,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(OwnerId,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;) &gt;0,1,0)
    +IF(FIND(MID(OwnerId,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID (OwnerId,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF (FIND(MID(OwnerId,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(OwnerId,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;) &gt;0,16,0)
    )+1,1)
&amp; MID (&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID (OwnerId,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(OwnerId,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(OwnerId,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;) &gt;0,4,0)
    +IF(FIND(MID(OwnerId,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID (OwnerId,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner_ID</label>
        <type>Text</type>
    </fields>
</CustomObject>